# joe-store

./: README.md  pyproject.toml
joestore/: manage.py
joestore/joestore/: asgi.py  settings.py  urls.py  wsgi.py
joestore/static/js/: cart.js
joestore/store/: models.py  tests.py  urls.py  views.py
joestore/store/migrations/: 0001_initial.py  0002_product_image.py
joestore/store/templates/account/: login.html  register.html
joestore/store/templates/store/: cart.html  checkout.html  main.html  store.html
joestore/store/templates/store/order_history/: orderdetails.html  orderhistory.html
