[tool.poetry]
name = "joe-store"
version = "0.1.0"
description = "Backend system for a simple ecommerce platform"
authors = ["Caique Marques"]
readme = "README.md"
package-mode=false

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"
pillow = "^10.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
